<?xml version="1.0"?>
<package format="2">
  <name>airsim_ros_pkgs</name>
  <version>0.0.0</version>
  <description>The airsim_ros_pkgs package</description>

  <maintainer email="kheo1772@gmail.com">Nicky Kim</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <export>
  </export>
</package>
